--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@open-wa/wa-automate": "^1.9.105",
+    "@types/node": "^14.0.27",
     "moment": "^2.27.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
